Workaround for z-index penthouse issue

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -512,7 +512,7 @@ li {
     position: fixed;
     top: 40px;
     left: 2%;
-    z-index: 99999;
+    z-index: 2;
     font-family: 'Open Sans Condensed', sans-serif;
     text-transform: uppercase;
     font-size: 1.5rem;
@@ -520,6 +520,12 @@ li {
     font-weight: bold;
 
     transition: opacity 0.4s ease-in-out;
+
+    // Workaround for penthouse issue #130
+    // https://github.com/pocketjoso/penthouse/issues/130
+    &:after {
+      z-index: 1;
+    }
 }
 a.fn-item {
     display: block;
